# microalpha-engine

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
config/: experiment.yaml
cpp/: CMakeLists.txt
cpp/include/microalpha/: features.hpp
cpp/src/: bindings.cpp  features.cpp
docs/example_run/2026-04-07_161228_h500_direction_pooled_5t/: config.json  hist_gbdt_permutation_importance.json  logistic_coefficients.json  logistic_permutation_importance.json  metrics.json  pooled_ticker_metrics.json  split_summary.json  ticker_feature_diagnostics.json  ticker_summaries.json
docs/example_run/2026-04-07_161228_h500_direction_pooled_5t/tables/: hist_gbdt_permutation_importance.csv  logistic_permutation_importance.csv  pooled_ticker_metrics.csv
microalpha/: __init__.py  config.py  diagnostics.py  evaluation.py  features.py  io.py  labels.py  models.py  pipeline.py  utils.py
scripts/: build_cpp.ps1  run_evaluation.py  run_experiment.py  run_feature_extraction.py  run_training.py
scripts/dev/: run_diagnostics.py
tests/: test_config.py  test_cpp_import.py  test_features.py  test_io.py  test_labels.py  test_pipeline.py
