[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microalpha"
version = "0.1.0"
description = "Event-driven market microstructure research engine"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["microalpha*"]